fixed the button not displaying the correct hover behavior due to wrapping the a tag inside the button tag.

--- a/css/index.css
+++ b/css/index.css
@@ -280,6 +280,9 @@ header {
     width: 100%;
   }
 }
+.home .walk a {
+  text-decoration: none;
+}
 .home .walk .walk-text {
   width: 50%;
 }
