--- a/less/home-page.less
+++ b/less/home-page.less
@@ -65,6 +65,9 @@ header{
       flex-wrap:wrap;
       width:100%;
     }
+    a{
+      text-decoration: none;
+    }
     .walk-text {
       width: 50%;
       @media @phone{
@@ -79,6 +82,7 @@ header{
       }
 
       button{
+        
         .button-specs();
         @media @phone{
           width:100%;
